# navit

./: .project
branches/iphone/: configure.in
branches/iphone/navit/: Makefile.am  attr_def.h  debug.h  navigation.c  navit.c  navit.h  route.c
branches/iphone/navit/graphics/sdl/: graphics_sdl.c
branches/iphone/navit/gui/internal/: gui_internal.c
branches/iphone/navit/osd/core/: osd_core.c
branches/iphone/navit/vehicle/iphone/: corelocation.h  corelocation.m  vehicle_iphone.c
branches/libglade/navit/: configure.in
branches/libglade/navit/src/graphics/gtk_drawing_area/: graphics_gtk_drawing_area.c
branches/libglade/navit/src/gui/gtk/: Makefile.am  cursor.xpm  destination.xpm  gui_gtk.c  gui_gtk.h  gui_gtk_statusbar.c  navit.glade  orientation.xpm
branches/modular_map/navit/: Makefile.am  configure.in
branches/modular_map/navit/src/: Makefile.am  attr.h  attr_def.h  compass.c  config.c  container.h  coord.c  coord.h  cursor.c  cursor.h  data.h  data_window.c  debug.c  debug.h  destination.c  display.c  display.h  file.c  file.h  graphics.c  graphics.h  gui.c  gui.h  item.c  item.h  item_def.h  layout.c  layout.h  main.c  map.c  map.h  mapset.c  mapset.h  maptype.c  maptype.h  menu.c  menu.h  navigation.c  navigation.h  navit.c  (+24 more)
branches/modular_map/navit/src/data/: Makefile.am
branches/modular_map/navit/src/data/garmin_img/: Makefile.am  garmin_img.c
branches/modular_map/navit/src/data/mg/: Makefile.am  block.c  map.c  mg.h  poly.c  street.c  town.c  tree.c
branches/modular_map/navit/src/data/textfile/: Makefile.am  textfile.c  textfile.h
branches/modular_map/navit/src/fib-1.1/: fib.c
branches/modular_map/navit/src/graphics/: Makefile.am
branches/modular_map/navit/src/graphics/gtk_drawing_area/: Makefile.am  graphics_gtk_drawing_area.c
branches/modular_map/navit/src/graphics/null/: Makefile.am
branches/modular_map/navit/src/graphics/opengl/: Makefile.am  graphics_opengl.c
branches/modular_map/navit/src/gui/: Makefile.am
branches/modular_map/navit/src/gui/gtk/: Makefile.am  gui_gtk.h  gui_gtk_action.c  gui_gtk_statusbar.c  gui_gtk_toolbar.c  gui_gtk_window.c
branches/modular_map/navit/src/gui/sdl/: Makefile.am  gui_sdl.h  gui_sdl_window.c  gui_sdl_window.cpp  sdl_events.cpp  sdl_events.h
branches/modular_map/navit/src/plugins/poi_geodownload/: poi.c
branches/public_transport/navit/: attr_def.h  navigation.c  navit.xml  osm2navit.c  route.c  route.h  search.c  start.c
branches/public_transport/navit/font/freetype/: Makefile.am
branches/public_transport/navit/graphics/null/: Makefile.am
branches/public_transport/navit/map/shapefile/: Makefile.am
branches/public_transport/navit/osd/core/: Makefile.am
branches/sdl/navit/: configure.in
branches/sdl/navit/src/: Makefile.am  container.h  country.h  cursor.c  destination.c  display.c  graphics.c  main.c  navigation.c  plugin.c  route.c  street.c  street.h  street_name.c  street_name.h  town.h  track.c  transform.h  vehicle.h
branches/sdl/navit/src/gui/sdl/: gl_fonts.c  sdl.c  sdl.h  sdl_drawing.c  sdl_drawing.h  sdl_road_textures.c
branches/wince/navit/: configure.in
branches/wince/navit/navit/: debug.c  endianess.h  file.c  file.h  gui.c  main.c  menu.c  menu.h  navit.c  osm2navit.c  popup.c  util.c  util.h
branches/wince/navit/navit/data/binfile/: binfile.c
branches/wince/navit/navit/data/textfile/: textfile.c
branches/wince/navit/navit/graphics/: Makefile.am
branches/wince/navit/navit/graphics/win32/: Makefile.am  graphics_win32.c  win32_gui.h  xpm2bmp.c
branches/wince/navit/navit/gui/gtk/: datawindow.c  destination.c
branches/wince/navit/navit/gui/internal/: Makefile.am
branches/wince/navit/navit/gui/win32/: Makefile.am  gui_win32.c  gui_win32.h  win32_gui.h  win32_gui_destination.c  win32_gui_notify.c
branches/wince/navit/navit/vehicle/file/: vehicle_file.c
branches/wince/navit/projs/CodeBlocks/: Gpx2Navit.cbp  Navit.cbp  Navit.new.cbp  Navit.workspace  NavitCommonLib.cbp  NavitCore.cbp  Navit_gtk.cbp  Navit_no_plugin.cbp  Navit_win32.cbp  Osm2Navit.cbp  binfile.cbp  data_garmin.cbp  data_garmin_img.cbp  data_mg.cbp  data_poi_geodownload.cbp  data_textfile.cbp  fib-1.1.cbp  gentypes.cbp  gtk_gl_ext.cbp  gtk_graphics.cbp  gtk_gui.cbp  gui_sdl.cbp  mdb.cbp  speech_speech_dispatcher.cbp  vehicle_demo.cbp  vehicle_file.cbp  win32_gui.cbp
branches/wince/navit/projs/CodeBlocks/Win32Extra/: navit_win32.c  serial_io.c  setenv.c
branches/wince/navit/projs/CodeBlocks/Win32Extra/sys/: mman.c
branches/wince/navit/projs/CodeBlocks/win32gui/: win32_graphics.c  win32_gui.c  win32_gui_destination.c  xpm2bmp.c
branches/wince/po/: ro.po.in
tags/R0_0_4/navit/projs/CodeBlocks/: data_garmin.cbp
